--- a/css/myweb.css
+++ b/css/myweb.css
@@ -261,6 +261,7 @@ a{
 }
 .about-title{
 	width: 100%;
+
 	
 }
 .about-title h2{
@@ -270,18 +271,21 @@ a{
 	text-shadow: 0 0 5px #FFFFFF;
 	margin-bottom: 10px;
 	letter-spacing: 5px;
+		opacity: 0;
 }
 .about-title h3{
 	text-align: center;
 	font-size: 20px;
 	text-shadow: 0 0 5px #FFFFFF;
 	font-weight: 100;
+		opacity: 0;
 }
 .about-title h1{
 	width: 60px;
 	height: 1px;
 	background: #CCCCCC;
 	margin: 16px auto;
+		opacity: 0;
 }
 .about-in{
 	padding: 100px;
@@ -404,6 +408,88 @@ a{
 	height: 50px;
 	font-size: 16px;
 }
+@keyframes move{
+	from{
+		margin-left: 0;
+	}
+	to{
+		margin-left: -1200px;
+	}
+}
+.can-lunbo{
+	width: 1200px;
+	height: 120px;
+	border: 2px solid #CCCCCC;
+	margin: 20px auto;
+	overflow: hidden;
+	background: #FFFFFF;
+}
+.can-lunbo:hover ul{
+	animation-play-state: paused;
+}
+.can-lunbo ul{
+	width: 2400px;
+	height: 120px;
+	animation: move 20s infinite linear;
+}
+.can-lunbo ul li{
+	box-sizing: border-box;
+	width: 200px;
+	height: 120px;
+	text-align: center;
+	line-height: 200px;
+	font-size: 20px;
+	float: left;
+	border: 2px solid #CCCCCC;
+}
+.can-lunbo li:nth-child(1){
+	background: url(../img/html.jpg) no-repeat center;
+	background-size:cover ;
+}
+.can-lunbo li:nth-child(2){
+	background: url(../img/css.jpg) no-repeat center;
+	background-size:cover ;
+}
+.can-lunbo li:nth-child(3){
+	background: url(../img/jq.jpg) no-repeat center;
+	background-size:cover ;
+}
+.can-lunbo li:nth-child(4){
+	background: url(../img/js.jpg) no-repeat center;
+	background-size:cover ;
+}
+.can-lunbo li:nth-child(5){
+	background: url(../img/node.jpg) no-repeat center;
+	background-size:cover ;
+}
+.can-lunbo li:nth-child(6){
+	background: url(../img/ph.jpg) no-repeat center;
+	background-size:cover ;
+}
+.can-lunbo li:nth-child(7){
+	background: url(../img/html.jpg) no-repeat center;
+	background-size:cover ;
+}
+.can-lunbo li:nth-child(8){
+	background: url(../img/css.jpg) no-repeat center;
+	background-size:cover ;
+}
+.can-lunbo li:nth-child(9){
+	background: url(../img/jq.jpg) no-repeat center;
+	background-size:cover ;
+}
+.can-lunbo li:nth-child(10){
+	background: url(../img/js.jpg) no-repeat center;
+	background-size:cover ;
+}
+.can-lunbo li:nth-child(11){
+	background: url(../img/node.jpg) no-repeat center;
+	background-size:cover ;
+}
+.can-lunbo li:nth-child(12){
+	background: url(../img/ph.jpg) no-repeat center;
+	background-size:cover ;
+}
 /*cantact*/
 .cantact-f{
 	padding: 40px 0;
@@ -451,6 +537,21 @@ a{
 	right: 50px;
 	font-size: 12px;
 	display: none;
+}
+/*xiaoguo*/
+@keyframes activetop{
+	from{
+		opacity: 0;
+		transform: translateY(100px);
+	}
+	to{
+		opacity: 1;
+		transform: translateY(0px);
+		
+	}
+}
+.activetop{
+	animation: activetop 1s 1 linear forwards;
 }
 /*响应式*/
 @media only screen and (min-width:1200px ) {
