--- a/css/myweb.css
+++ b/css/myweb.css
@@ -29,7 +29,12 @@ a{
 	text-align: center;	
 }
 #load img{
-	padding-top: 20%;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
 }
 /**/
 .header-f{
@@ -134,7 +139,7 @@ a{
 	
 }
 .home{
-	height: 100%;
+	height: 661px;
 	width: 100%;	
 	position: relative;
 }
@@ -232,7 +237,6 @@ a{
 	font-weight: 400;
 	text-align: center;
 	letter-spacing: 5px;
-	text-shadow: 0 0 1px #FFFFFF;
 }
 .h-list{
 	position: absolute;
@@ -256,12 +260,13 @@ a{
 .about-f{
 	width: 100%;
 	padding: 60px 0;
+	padding-bottom: 0;
 	overflow: hidden;
 	
 }
 .about-title{
 	width: 100%;
-
+		opacity: 0;
 	
 }
 .about-title h2{
@@ -271,21 +276,21 @@ a{
 	text-shadow: 0 0 5px #FFFFFF;
 	margin-bottom: 10px;
 	letter-spacing: 5px;
-		opacity: 0;
+
 }
 .about-title h3{
 	text-align: center;
 	font-size: 20px;
 	text-shadow: 0 0 5px #FFFFFF;
 	font-weight: 100;
-		opacity: 0;
+
 }
 .about-title h1{
 	width: 60px;
 	height: 1px;
 	background: #CCCCCC;
 	margin: 16px auto;
-		opacity: 0;
+
 }
 .about-in{
 	padding: 100px;
@@ -294,11 +299,13 @@ a{
 	box-sizing: border-box;
 	width: 50%;
 	float: left;
+	opacity: 0;
 }
 .about-img{
 	float: left;
 	box-sizing: border-box;
 	width: 50%;
+	opacity: 0;
 }
 .about-in h3{
 	font-size: 16px;
@@ -329,9 +336,7 @@ a{
 .works-f{
 	width: 100%;
 	padding: 60px 0;
-	padding-top: 0;
 	overflow: hidden;
-
 }
 .work-in{
 	text-align: center;
@@ -390,7 +395,7 @@ a{
 .can-f{
 	width: 100%;
 	padding: 70px 0;
-
+	padding-bottom: 0;
 	background: #FFFFFF;
 	overflow: visible;
 }
@@ -551,7 +556,50 @@ a{
 	}
 }
 .activetop{
-	animation: activetop 1s 1 linear forwards;
+	animation: activetop 1s linear forwards 0.5s;
+}
+@keyframes activeleft{
+	from{
+		opacity: 0;
+		transform: translateX(100px);
+	}
+	to{
+		opacity: 1;
+		transform: translateX(0px);
+	}
+}
+.activeleft{
+	animation: activeleft 1s linear forwards 0.5s;	
+}
+@keyframes activeright{
+	from{
+		opacity: 0;
+		transform: translateX(-100px);
+	}
+	to{
+		opacity: 1;
+		transform: translateX(0px);
+	}
+}
+.activeright{
+	animation: activeright 1s linear forwards 0.5s;	
+}
+/**/
+.addgg{
+	width: 100%;
+	height: 200px;
+	background: url(../img/aac.jpg) no-repeat center;
+	background-size: cover;
+	opacity: 0.9;
+	box-sizing: border-box;
+	border: 5px solid rgba(255,255,255,0.8);
+	border-left: 0;
+	border-right: 0;
+}
+.addgg-1{
+
+	background: url(../img/abs.jpg) no-repeat center;
+	background-size: cover;	
 }
 /*响应式*/
 @media only screen and (min-width:1200px ) {
